--- a/src/Osu.Music.UI/Views/Dialogs/ManagePlaylistNameView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/ManagePlaylistNameView.xaml
@@ -22,7 +22,7 @@
         <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" Text="{Binding Title}"/>
         <TextBox Grid.Row="1" Margin="0 6 0 0" wpf:HintAssist.Hint="{DynamicResource Strings.ManagePlaylistNameView.TextHint}" FontSize="14" MinWidth="300"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                 behaviors:ValidationBehaviour.HasError="{Binding NameHasError}">
+                 behaviors:ValidationBehavior.HasError="{Binding NameHasError}">
             <TextBox.Text>
                 <Binding Path="Name" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
