--- a/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
+++ b/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:gl="clr-namespace:System.Globalization;assembly=mscorlib"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:behaviors="clr-namespace:Osu.Music.UI.Behaviors"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -41,9 +42,12 @@
                             </Button.Content>
                         </Button>
                     </StackPanel>
-                    <TextBlock Text="{Binding Model.Playlist.Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="0 5 0 0"/>
-                    <TextBlock Text="{Binding Model.Playlist.Updated, StringFormat=Updated {0}, ConverterCulture={x:Static gl:CultureInfo.CurrentCulture}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
-                    <StackPanel Orientation="Horizontal" Margin="0 15 0 0">
+                    <TextBlock Text="{Binding Model.Playlist.Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="16" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="0 0 0 0">
+                        <i:Interaction.Behaviors>
+                            <behaviors:CultureBehavior/>
+                        </i:Interaction.Behaviors>
+                    </TextBlock>
+                    <StackPanel Orientation="Horizontal" Margin="0 45 0 0">
                         <Button Style="{DynamicResource MaterialDesignRaisedButton}" Command="{Binding LaunchPlaylistCommand}" Foreground="White" Content="{DynamicResource Strings.PlaylistDetailsView.Play}" MinWidth="80"/>
                         <Button Style="{DynamicResource MaterialDesignFlatButton}" Content="{DynamicResource Strings.PlaylistDetailsView.Delete}" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Margin="5 0 0 0" Command="{Binding DeleteCommand}" Cursor="Hand"/>
                     </StackPanel>
