--- a/src/Osu.Music.UI/Resources/Dictionaries/Colors.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Colors.xaml
@@ -1,18 +1,33 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Color x:Key="ColorHover">#10000000</Color>
+    <Color x:Key="ColorBackground">#FFFFFFFF</Color>
+    <Color x:Key="ColorForeground">#FF000000</Color>
+    <Color x:Key="ColorBorder">#20000000</Color>
+
+    <Color x:Key="ColorTitleBarHover">#19000000</Color>
+    <Color x:Key="ColorTitleBarPressed">#35000000</Color>
+    
     <Color x:Key="ColorMain">#FF800080</Color>
     <Color x:Key="ColorMainLight">#FFb200b3</Color>
     <Color x:Key="ColorMainDark">#FF4c004d</Color>
-    <Color x:Key="ColorMainBorder">#20000000</Color>
+
     <Color x:Key="ColorTextDisabled">#61000000</Color>
     <Color x:Key="ColorTextMediumEmphasis">#99000000</Color>
     <Color x:Key="ColorTextHighEmphasis">#DE000000</Color>
 
-    <SolidColorBrush x:Key="SolidColorBrushHover" Color="#10000000"/>
+    <SolidColorBrush x:Key="SolidColorBrushHover" Color="{DynamicResource ColorHover}"/>
+    <SolidColorBrush x:Key="SolidColorBrushBackground" Color="{DynamicResource ColorBackground}"/>
+    <SolidColorBrush x:Key="SolidColorBrushForeground" Color="{DynamicResource ColorForeground}"/>
+    <SolidColorBrush x:Key="SolidColorBrushBorder" Color="{DynamicResource ColorBorder}"/>
+
+    <SolidColorBrush x:Key="SolidColorBrushTitleBarHover" Color="{DynamicResource ColorTitleBarHover}"/>
+    <SolidColorBrush x:Key="SolidColorBrushTitleBarPressed" Color="{DynamicResource ColorTitleBarPressed}"/>
+
     <SolidColorBrush x:Key="SolidColorBrushMain" Color="{DynamicResource ColorMain}"/>
     <SolidColorBrush x:Key="SolidColorBrushMainLight" Color="{DynamicResource ColorMainLight}"/>
     <SolidColorBrush x:Key="SolidColorBrushMainDark" Color="{DynamicResource ColorMainDark}"/>
-    <SolidColorBrush x:Key="SolidColorBrushMainBorder" Color="{DynamicResource ColorMainBorder}"/>
+
     <SolidColorBrush x:Key="SolidColorBrushTextDisabled" Color="{DynamicResource ColorTextDisabled}"/>
     <SolidColorBrush x:Key="SolidColorBrushTextMediumEmphasis" Color="{DynamicResource ColorTextMediumEmphasis}"/>
     <SolidColorBrush x:Key="SolidColorBrushTextHighEmphasis" Color="{DynamicResource ColorTextHighEmphasis}"/>
